fixing grid gap and card title text wrap

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -17,9 +17,6 @@
 }
 
 .Card-title-container {
-	height: 72px;
-	/* top: 350px; */
-	gap: 10px;
 	background: linear-gradient(83.18deg, rgba(0, 0, 0, 0.6) 5.34%, rgba(102, 102, 102, 0) 109.75%);
 
 }
@@ -27,12 +24,11 @@
 .Card-title-container h3 {
 	margin: 0;
 	width: 100%;
-	height: 40px;
-	font-family: Lexend;
-	font-weight: 400;
+	font-family: var(--font-primary);
+	font-weight: 300;
 	font-size: var(--fs-headline);
-	line-height: 40px;
+	line-height: var(--fs-headline);
 	text-align: left;
-	padding: 16px;
+	padding: var(--gap-sm);
 	color: #DADADA
 }
