--- a/src/sections/Projects/Projects.css
+++ b/src/sections/Projects/Projects.css
@@ -25,11 +25,8 @@
 .ProjectsPage-grid-container{
    display: grid;
    width: 100%;
-   grid-template-columns: repeat(
-      auto-fit, minmax(33%, 1fr)
-   );
-   gap: var(--gap-xsm);
-   justify-content: space-between;
+   grid-template-columns: 1fr 1fr;
+   justify-content: center;
 }
 
 @media (max-width: 1100px) {
